profile image z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,7 @@ p:not(:last-child) {
   padding: 23rem 0 2rem;
   color: var(--color-white);
   background-color: #141b1f;
+  background-color: #0b0b0f;
 }
 .about {
   display: grid;
@@ -257,12 +258,8 @@ p:not(:last-child) {
     grid-gap: 2rem;
   }
 }
-.about__content {
-  position: relative;
-}
 .about__image {
   max-width: 25rem;
-  position: relative;
 }
 .about__image img:nth-child(2) {
   position: absolute;
