--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -24,12 +24,11 @@
     // width: 70%;
     // display: grid;
     // justify-content: end;
-    position: relative;
   }
 
   &__image {
     max-width: 25rem;
-    position: relative;
+    // position: relative;
 
     & img:nth-child(2) {
       position: absolute;
@@ -40,6 +39,7 @@
     }
 
     &:hover {
+      // z-index: -1;
       transform: rotate(-10deg);
       & img:nth-child(2) {
         display: block;
