--- a/scss/sections/_layout.scss
+++ b/scss/sections/_layout.scss
@@ -16,6 +16,7 @@
   // background-color: #0e141b;
   background-color: #141b1f;
   // background-color: #0d314a;
+  background-color: #0b0b0f;
 
   // background-color: var(--color-primary);
 
